--- a/data_processing_pipeline/category_classification_service/pyproject.toml
+++ b/data_processing_pipeline/category_classification_service/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 
 dependencies = [
+    "dotenv>=0.9.9",
     "langdetect>=1.0.9",
     "numpy>=2.3.3",
     "pandas>=2.3.2",
