--- a/backend/data_processing/data_ingestion/pyproject.toml
+++ b/backend/data_processing/data_ingestion/pyproject.toml
@@ -5,6 +5,7 @@ description = "Worker Service in charge of taking in data from reddit api and se
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "confluent-kafka>=2.11.1",
     "dotenv>=0.9.9",
     "langdetect>=1.0.9",
     "mypy>=1.18.2",
