--- a/backend/data_processing/topic_classification/pyproject.toml
+++ b/backend/data_processing/topic_classification/pyproject.toml
@@ -7,6 +7,18 @@ requires-python = ">=3.13"
 dependencies = [
     "confluent-kafka>=2.11.1",
     "keybert>=0.9.0",
+    "mypy>=1.18.2",
     "pandas>=2.3.3",
+    "pytest>=8.4.2",
+    "pytest-mock>=3.15.1",
+    "ruff>=0.14.0",
     "sentence-transformers>=5.1.1",
 ]
+
+[tool.mypy]
+python_version = "3.13"
+check_untyped_defs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+warn_return_any = true
+warn_unused_ignores = true
