--- a/backend/data_processing/category_classification/pyproject.toml
+++ b/backend/data_processing/category_classification/pyproject.toml
@@ -20,3 +20,12 @@ dependencies = [
     "sentence-transformers>=5.1.0",
     "xgboost>=3.0.5",
 ]
+
+
+[tool.mypy]
+python_version = "3.13"
+check_untyped_defs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+warn_return_any = true
+warn_unused_ignores = true
