--- a/infrastructure/kubernetes/inventory/hosts.yaml
+++ b/infrastructure/kubernetes/inventory/hosts.yaml
@@ -5,7 +5,7 @@ server: #
       ansible_host: 10.0.0.167
       ansible_user: tiamat
       ansible_ssh_private_key_file: ~/.ssh/id_ed25519
-      ansible_become_password: Zebcityofdoom24
+      ansible_become_password: 
       #ansible_password: 5526
       #ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
       #ansible_become_password: 5526
@@ -14,11 +14,16 @@ server: #
     #tachyon:
 
 agent:
-  tempest:
-  fafnir:
-  glaurung:
-  bahumat:
-  nidhog:
+  hosts:
+    tachyon:
+      ansible_host: 10.0.0.214
+      ansible_user: tachyon
+      ansible_ssh_private_key_file: ~/.ssh/tempest
+      ansible_become_password: 
+    #fafnir:
+    #glaurung:
+    #bahumat:
+    #nidhog:
 
 cluster:
   children:
