--- a/infrastructure/kubernetes/roles/argo_cd/tasks/reset.yaml
+++ b/infrastructure/kubernetes/roles/argo_cd/tasks/reset.yaml
@@ -58,3 +58,25 @@
         - argo-cd-argocd-repo-server-metrics
         - argo-cd-argocd-server
         - argo-cd-argocd-server-metrics
+
+    - name: Delete ArgoCD Certificate resources
+      ansible.builtin.command:
+        cmd: "{{ certificate_resource }}"
+      loop:
+        - kubectl delete certificate argocd-repo-tls -n argocd
+        - kubectl delete certificate argocd-dex-tls -n argocd
+        - kubectl delete certificate argocd-server-tls -n argocd
+      loop_control:
+        loop_var: certificate_resource
+      ignore_errors: true
+    
+    - name: Delete ArgoCD Secrets resources
+      ansible.builtin.command:
+        cmd: "{{ secret_resource }}"
+      loop:
+        - kubectl delete secrets argocd-repo-server-tls -n argocd
+        - kubectl delete secrets argocd-dex-server-tls -n argocd
+        - kubectl delete secrets argocd-server-tls -n argocd
+      loop_control:
+        loop_var: secret_resource
+      ignore_errors: true
