--- a/infrastructure/kubernetes/roles/cert_manager/tasks/reset.yaml
+++ b/infrastructure/kubernetes/roles/cert_manager/tasks/reset.yaml
@@ -6,23 +6,10 @@
     name: cert-manager
     namespace: argocd
 
-- name: Delete ArgoCD Certificate resourcs
+- name: Delete ArgoCD Secrets resourcs
   ansible.builtin.command:
     cmd: "{{ certificate_resource }}"
   loop:
-    - kubectl delete issuer selfsigned-issuer
-    - kubectl delete clusterissuer letsencrypt-dns
-    - kubectl delete clusterissuer selfsigned-issuer
-    - kubectl delete certificate argocd-repo-tls -n argocd
-    - kubectl delete certificate argocd-dex-tls -n argocd
-    - kubectl delete certificate argocd-server-tls -n argocd
-    - kubectl delete certificate postgres-db-tls -n postgres
-    - kubectl delete certificate postgres-ca -n postgres
-    - kubectl delete secrets argocd-repo-server-tls -n argocd
-    - kubectl delete secrets argocd-dex-server-tls -n argocd
-    - kubectl delete secrets argocd-server-tls -n argocd
-    - kubectl delete secrets postgres-tls-secret -n postgres
-    - kubectl delete secrets postgres-ca -n postgres
     - kubectl -n cert-manager delete certificaterequests -l cert-manager.io/certificate-name=argocd-repo-tls
     - kubectl -n cert-manager delete certificaterequests -l cert-manager.io/certificate-name=argocd-dex-tls
     - kubectl -n cert-manager delete certificaterequests -l cert-manager.io/certificate-name=argocd-server-tls
