--- a/infrastructure/kubernetes/roles/k3s/tasks/facts.yaml
+++ b/infrastructure/kubernetes/roles/k3s/tasks/facts.yaml
@@ -1,6 +1,9 @@
 - name: setting up map facts
   ansible.builtin.set_fact:
     k3s_map:
+      agent:
+        ha: '{{ groups.agent | length > 2 }}'
+        hosts: '{{ groups.agent }}'
       cluster:
         dns: 10.43.0.10
         label: default
@@ -11,6 +14,16 @@
           bin: /usr/local/bin
           config: /etc/rancher/k3s
           data: /var/lib/rancher/k3s
+        kubelet:
+          eviction_hard:
+            memory_available: 500Mi # evict pods on node if only 500 Mi ram left
+          eviction_max_pod_grace_period: 60
+          eviction_soft:
+            memory_available: 1Gi
+          system_reserved:
+            cpu: 1000m
+            ephemeral_storage: 5Gi
+            memory: 1Gi
         sysctl_parameters:
           fs.file-max: 1048576
           fs.inotify.max_user_watches: 262144
@@ -66,9 +79,11 @@
   ansible.builtin.set_fact:
     k3s_project:
       cluster:
+        config: '{{ k3s_map.node.directory.config }}/config.yaml'
         token: "{{ hostvars[k3s_map.server.default_host].k3s_project.cluster.token | default('') }}"
         tolerations: ""
         kubeconfig: /etc/rancher/k3s/k3s.yaml
+        config_kubelet: '/etc/rancher/k3s/kubelet.yaml'
       node:
         binary: /usr/local/bin/k3s
       release:
@@ -80,36 +95,10 @@
   ansible.builtin.set_fact:
     k3s_node:
       ip: '{{ ansible_default_ipv4.address }}'
-      kubelet:
-        - arg: eviction-hard
-          value: imagefs.available<15%,imagefs.inodesFree<5%,memory.available<500Mi,nodefs.available<10%,nodefs.inodesFree<5%
-        - arg: eviction-max-pod-grace-period
-          value: 60
-        - arg: eviction-minimum-reclaim
-          value: imagefs.available=15%,imagefs.inodesFree=5%,memory.available=500Mi,nodefs.available=10%,nodefs.inodesFree=5%
-        - arg: eviction-soft
-          value: imagefs.available<30%,imagefs.inodesFree<10%,memory.available<1Gi,nodefs.available<30%,nodefs.inodesFree<10%
-        - arg: eviction-soft-grace-period
-          value: imagefs.available=2m,imagefs.inodesFree=2m,memory.available=1m30s,nodefs.available=2m,nodefs.inodesFree=2m
-        - arg: system-reserved
-          value: cpu=1,ephemeral-storage=5Gi,memory=1Gi
-      service: "{{ 'agent' if inventory_hostname not in k3s_map.server.hosts else 'server' }}"
-
-- name: set project kubelet arguments fact
-  ansible.builtin.set_fact:
-    k3s_project_kublet_args: "{{ k3s_project_kublet_args | default([]) | union(['='.join((kubelet.arg | string, kubelet.value | string))]) | sort }}"
-  loop: '{{ k3s_node.kubelet }}'
-  loop_control:
-    loop_var: kubelet
-  run_once: true
-
-- name: set resources fact
-  ansible.builtin.set_fact:
-    k3s_resources:
-      node:
-        kubelet:
-          args: '{{ k3s_project_kublet_args }}'
-  run_once: true
+      binary: '{{ k3s_map.node.directory.bin }}/k3s'
+      service: 
+        name: "{{ 'agent' if inventory_hostname not in k3s_map.server.hosts else 'server' }}"
+        type: "{{ 'agent' if inventory_hostname not in groups.server else 'server' }}"
 
 
 - name: Set variables fact
