--- a/infrastructure/kubernetes/roles/k3s/tasks/main.yaml
+++ b/infrastructure/kubernetes/roles/k3s/tasks/main.yaml
@@ -26,10 +26,6 @@
       delay: 1
       until: binary is not failed
     
-    - name: Set role postinstall fact
-      ansible.builtin.set_fact:
-        k3s_postinstall: false
-    
     - name: Create configuration directory
       ansible.builtin.file:
         path: /etc/rancher/k3s
@@ -38,9 +34,25 @@
         group: root
         mode: '755'
 
-    - name: Debug service mapping before creation
-      debug:
-        var: k3s_map.service
+    - name: Set role postinstall fact
+      ansible.builtin.set_fact:
+        k3s_postinstall: false
+
+    - name: Create configuration file
+      ansible.builtin.template:
+        src: config.j2
+        dest: '{{ k3s_project.cluster.config }}'
+        owner: root
+        group: root
+        mode: '600'
+
+    - name: Create kubelet configuration file
+      ansible.builtin.template:
+        src: config_kubelet.j2
+        dest: '{{ k3s_project.cluster.config_kubelet }}'
+        owner: root
+        group: root
+        mode: '644'
 
     - name: Create service file
       ansible.builtin.template:
@@ -59,6 +71,14 @@
         owner: root
         group: root
         mode: '600'
+    
+    - name: Enable and start k3s-agent
+      when: inventory_hostname in k3s_map.agent.hosts
+      ansible.builtin.systemd:
+        name: k3s-agent
+        enabled: yes
+        state: started
+      become: true
       
 
 - name: flush handlers
@@ -70,6 +90,7 @@
 
 - name: Server configuration
   notify: Restart service
+  when: inventory_hostname in k3s_map.server.hosts
   block:
     - name: finish role postinitialization
       ansible.builtin.set_fact:
