--- a/infrastructure/kubernetes/roles/network_policies/templates/nginx.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/templates/nginx.yaml
@@ -26,6 +26,18 @@ spec:
       destination:
         ports: [80, 443]
   egress:
+    - action: Allow # DNS lookups
+      protocol: UDP
+      destination:
+        selector: k8s-app == "kube-dns"
+        namespaceSelector: projectcalico.org/name == "kube-system"
+        ports: [53]
+    - action: Allow # DNS lookups (TCP)
+      protocol: TCP
+      destination:
+        selector: k8s-app == "kube-dns"
+        namespaceSelector: projectcalico.org/name == "kube-system"
+        ports: [53]
     - action: Allow # nginx -> frontend
       protocol: TCP
       destination:
