--- a/infrastructure/kubernetes/roles/network_policies/templates/prometheus-operator.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/templates/prometheus-operator.yaml
@@ -9,6 +9,18 @@ spec:
   types:  
     - Egress
   egress:
+    - action: Allow # DNS lookups
+      protocol: UDP
+      destination:
+        selector: k8s-app == "kube-dns"
+        namespaceSelector: projectcalico.org/name == "kube-system"
+        ports: [53]
+    - action: Allow # DNS lookups (TCP)
+      protocol: TCP
+      destination:
+        selector: k8s-app == "kube-dns"
+        namespaceSelector: projectcalico.org/name == "kube-system"
+        ports: [53]
     - action: Allow # ArgoCD application controller metrics
       protocol: TCP
       destination:
