--- a/infrastructure/kubernetes/playbooks/reset.yaml
+++ b/infrastructure/kubernetes/playbooks/reset.yaml
@@ -11,24 +11,18 @@
         name: "{{ reset }}"
         tasks_from: reset
       loop:
-        #- network_policies
-        #- cert_manager
+        - network_policies
+        - cert_manager
         - prometheus
-        #- nginx
-        #- cloudflare_tunnel
-        #- external_dns
-        #- frontend
+        - nginx
+        - cloudflare_tunnel
+        - external_dns
+        - frontend
         - argo_cd
         - calico
       loop_control:
         loop_var: reset
-      when: (ansible_run_tags == ['all']) or (reset in ansible_run_tags)
-
-- name: Reset Cluster - Cluster Roles
-  hosts: cluster
-  become: true
-  gather_facts: true
-  tasks:
+    
     - name: Reset cluster roles
       ansible.builtin.include_role:
         name: "{{ reset }}"
@@ -38,7 +32,24 @@
         - k3s
       loop_control:
         loop_var: reset
-      when: (ansible_run_tags == ['all']) or (reset in ansible_run_tags)
+
+- name: Reset Cluster - Agent
+  hosts: agent
+  become: true
+  gather_facts: true
+  tasks:
+    - name: Get packages information
+      ansible.builtin.package_facts:
+      
+    - name: Reset cluster roles
+      ansible.builtin.include_role:
+        name: "{{ reset }}"
+        tasks_from: reset
+      loop:
+        - cluster
+        - k3s
+      loop_control:
+        loop_var: reset
 
 - name: Post Tasks
   hosts: cluster
