--- a/infrastructure/kubernetes/roles/calico/tasks/validation.yaml
+++ b/infrastructure/kubernetes/roles/calico/tasks/validation.yaml
@@ -13,3 +13,15 @@
     port: 6443
     host: 127.0.0.1
     timeout: 60
+
+- name: Remove any leftover Flannel interfaces and configs
+  become: true
+  shell: |
+    ip link delete flannel.1 2>/dev/null || true
+    rm -rf /var/lib/cni/flannel /etc/cni/net.d/10-flannel.conflist
+
+- name: Restart K3s after cleanup
+  become: true
+  systemd:
+    name: k3s
+    state: restarted
