--- a/infrastructure/kubernetes/roles/network_policies/tasks/reset.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/tasks/reset.yaml
@@ -52,9 +52,9 @@
           ansible.builtin.shell:
             cmd: calicoctl delete networkpolicy default.cert-manager -n cert-manager
 
-        - name: Deleting postgres Network Policy
-          ansible.builtin.shell:
-            cmd: calicoctl delete networkpolicy default.postgres -n backend
+        #- name: Deleting postgres Network Policy
+        #  ansible.builtin.shell:
+        #    cmd: calicoctl delete networkpolicy default.postgres -n backend
             
     - name: deleting argocd deny all
       ansible.builtin.shell:
