--- a/infrastructure/kubernetes/roles/network_policies/templates/applicationset-controller.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/templates/applicationset-controller.yaml
@@ -9,6 +9,24 @@ spec:
   types:
     - Egress
   egress:
+    - action: Allow # DNS lookups
+      protocol: UDP
+      destination:
+        selector: k8s-app == "kube-dns"
+        namespaceSelector: projectcalico.org/name == "kube-system"
+        ports: [53]
+    - action: Allow # DNS lookups (TCP)
+      protocol: TCP
+      destination:
+        selector: k8s-app == "kube-dns"
+        namespaceSelector: projectcalico.org/name == "kube-system"
+        ports: [53]
+    - action: Allow # Kubernetes API access
+      protocol: TCP
+      destination:
+        services:
+          namespace: default
+          name: kubernetes
     - action: Allow # Allowing ArgoCD applicationset -> ArgoCD repo server for template processing
       protocol: TCP
       destination:
