--- a/infrastructure/kubernetes/roles/network_policies/templates/cert-manager.yaml
+++ b/infrastructure/kubernetes/roles/network_policies/templates/cert-manager.yaml
@@ -25,6 +25,18 @@ spec:
       destination:
         ports: [9402]
   egress:
+    - action: Allow # DNS lookups
+      protocol: UDP
+      destination:
+        selector: k8s-app == "kube-dns"
+        namespaceSelector: projectcalico.org/name == "kube-system"
+        ports: [53]
+    - action: Allow # DNS lookups (TCP)
+      protocol: TCP
+      destination:
+        selector: k8s-app == "kube-dns"
+        namespaceSelector: projectcalico.org/name == "kube-system"
+        ports: [53]
     - action: Allow # allowing ingress to talk to cert manager for ssl cert verification
       protocol: TCP
       destination: 
